Intellij allucination???